crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__disallow_unique_constraint__test__adding_unique_constraint_err.snap
---
source: crates/squawk_linter/src/rules/disallow_unique_constraint.rs
expression: errors
---
[
    Violation {
        code: DisallowedUniqueConstraint,
        message: "Adding a `UNIQUE` constraint requires an `ACCESS EXCLUSIVE` lock which blocks reads and writes to the table while the index is built.",
        text_range: 28..80,
        help: Some(
            "Create an index CONCURRENTLY and create the constraint using the index.",
        ),
    },
]
