crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__disallow_unique_constraint__test__unique_constraint_inline_add_column_err.snap
---
source: crates/squawk_linter/src/rules/disallow_unique_constraint.rs
expression: errors
---
[
    Violation {
        code: DisallowedUniqueConstraint,
        message: "Adding a `UNIQUE` constraint requires an `ACCESS EXCLUSIVE` lock which blocks reads and writes to the table while the index is built.",
        text_range: 37..69,
        help: Some(
            "Create an index CONCURRENTLY and create the constraint using the index.",
        ),
    },
]
